lots of updates

--- a/index.html
+++ b/index.html
@@ -163,13 +163,13 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/vivamiami.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Landing Page</h4>
               <p>Front-End Development</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Landing Page"><i class="bx bx-plus"></i></a>
-                <a href="https://github.com/ArgenisDLR/AR-Dice" class="bx bx-link"></a>
+                <a href="assets/img/portfolio/vivamiami2.jpg" data-gall="portfolioGallery" class="venobox" title="Landing Page"><i class="bx bx-plus"></i></a>
+                <a href="https://www.argenisdelarosa.com" class="bx bx-link"></a>
               </div>
             </div>
           </div>
@@ -197,7 +197,7 @@
               <p>Front-End Development</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/developer2.jpg" data-gall="portfolioGallery" class="venobox" title="Developer Portfolio"><i class="bx bx-plus"></i></a>
-                <a href="https://argenis.dev" class="bx bx-link"></a>
+                <a href="https://argenisdelarosa.com" class="bx bx-link"></a>
               </div>
             </div>
           </div>
